Harden vault scan against null-valued YAML and unexpected parser failures
Empty-template files with null metadata values (e.g. `metadata: { faction: , role: }`)
crashed the scan via Map.copyOf in Note's compact constructor. Switch to null-tolerant
defensive copies and add a per-file safety net in IndexBuilder so any future parser
exception surfaces as a PARSE_ERRORS issue instead of taking down the watch server.

Co-Authored-By: Claude Code <noreply@anthropic.com>